Tweak the padding for the button on mobile layouts and fix the color of the email input

--- a/styles.css
+++ b/styles.css
@@ -155,13 +155,17 @@ form {
 input[type="email"] {
   border-radius: 200px;
   border: 1px solid hsl(0, 60%, 83%);
-  color: hsl(0, 34%, 73%);
+  color: #000;
   padding: 0.8rem 1.5rem;
   width: 100%;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   background: inherit;
   padding-inline-end: 135px;
+}
+
+input[type="email"]::placeholder {
+  color: hsl(0, 34%, 73%);
 }
 
 input[type="email"]:invalid {
@@ -177,7 +181,7 @@ input[type="email"]:invalid {
 
 form button {
   border: none;
-  padding: 1rem 1.735rem;
+  padding: 1rem 1.8rem;
   border-radius: 200px;
   background: linear-gradient(
     to right,
